# xiaopai

./: .gitignore  .gitmodules  DEMO_CMD.md  README.md
openclaw-skills/: .gitignore  openclaw_capability_design.md  openclaw_skill.md
openclaw-skills/plugins/weather-provider/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-skills/plugins/work-assistant/: README.md  VERIFICATION.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-skills/plugins/xiaopai-control/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
stack-chan/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_flash.sh  build_and_publish_ota.sh  env.sh  flash.sh  monitor.sh  partitions.csv  sdkconfig  sdkconfig.defaults  update_to_latest_server.sh
stack-chan/build_codec_probe/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
stack-chan/build_codec_probe/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
stack-chan/build_codec_probe/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
stack-chan/main/: CMakeLists.txt  Kconfig.projbuild  codec_audio_output.cpp  codec_audio_output.h  expression_controller.cpp  expression_controller.h  idf_component.yml  main.cpp  main_app_state.inc  main_camera_motion.inc  main_command_services.inc  main_firmware_ota.inc  main_head_touch.inc  main_platform.inc  main_realtime_speech.inc  main_realtime_transport.inc  main_tts_commands.inc  main_wifi_provisioning.inc  voice_state.cpp  voice_state.h
stack-chan/main/audio/: xiaopai_audio_service.cpp  xiaopai_audio_service.h
stack-chan/stack-chan-server/: .gitignore  API.md  HTTP_COMMAND_API.md  README.md  requirements-face.txt  requirements-yunet.txt  requirements.txt  start.sh
stack-chan/tools/: preview_face_grid.py  render_face_pngs.py
(+214 files in other folders)
